2016-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Fix SourceForge issue #361
	"out-of-bounds read in coders/xpm.c:150:24"

	* coders/psd.c (ReadPSDImage): Add some defensive code to assure
	that image layers are not freed twice.

2016-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (InitializeLogInfo): Simplify LogInfo structure and
	its allocation in order to lessen the amount of fixed overhead.

2016-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (WriteJP2Image): Fix SourceForge issue #378 "jp2:
	impossible to create lossless jpeg-2000".  With this fix,
	specifying 'define jp2:rate=1.0' or '-quality 100' results in a
	lossless JP2 file.

2016-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h: Update for GCC 5.

	* PerlMagick/MANIFEST: Update PerlMagick manifest.

	* PerlMagick/t/{read.t, write.t}: Add tests for MAT v4.

2016-04-03 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Matlab V4 attempt to read complex part of data.

2016-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/features.pl.in: Provide a way that PerlMagick
	feature tests can test if a feature is supported.  Use it to make
	the PSD test optional.

	* coders/Makefile.am: Only build PSD module if
	ENABLE_BROKEN_CODERS is enabled.

	* magick/module.c (UnloadModule): Only invoke the module
	unregister function if it is defined.  The module register
	function is not defined if either the register or unregister
	functions were not found in the module which was loaded.

2016-04-02 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Matlab V4 files are also rotated.
        * PerlMagick/t/input_gray_lsb_double_V4.mat   Demo Matlab V4 file.

2016-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfo): Only declare that ExceptionInfo
	argument is not used if modules are not supported.
