@@ -1,3 +1,7 @@
+2016-04-13 Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c Missing break added.
+
 2016-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xpm.c (ReadXPMImage): Fix SourceForge issue #361
